Fixed checkbox alignment next to text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,8 +5,7 @@ input[type="checkbox"] {
   position: relative;
   appearance: none;
   height: 18px;
-  margin-top: 5px;
-  margin-right: 15px;
+  margin-right: 12px;
 }
 
 input[type="checkbox"]::before {
